<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:id="@+id/menuItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        tools:text="menu item title"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorSurveyTitle"/>

    <LinearLayout
        android:id="@+id/mySurveysButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/menuItemTitle">
        <ImageButton
            android:contentDescription="@string/publish"
            android:id="@+id/menuPublishButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_upload"
            android:background="?android:selectableItemBackground"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:scaleType="fitCenter"/>
        <ImageButton
            android:contentDescription="@string/edit"
            android:id="@+id/menuEditButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_edit"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:background="?android:selectableItemBackground"
            android:scaleType="fitCenter"/>
        <ImageButton
            android:contentDescription="@string/delete"
            android:id="@+id/menuDeleteButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_delete"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:background="?android:selectableItemBackground"
            android:scaleType="fitCenter"/>
    </LinearLayout>
</RelativeLayout>
